# paste2vrchat

./: .gitignore  .gitmodules  Cargo.toml  README.md  Setup.bat  app.manifest  build.bat  build.ps1  go.mod  go.sum  main.go  paste2vrchat.nimble
.github/workflows/: release.yml
app/: app.go  build-info.go  gui.go  http-server.go
cli/: README.md  build.bat  nim.cfg  p2vrc_cli.nim  p2vrc_cli.nimble
internal/w32/: w32.go
