[package]
authors = ["CunYu <cunyu@liuli.lol>"]
edition = "2021"
name = "paste2vrchat"
version = "0.1.0"

[dependencies]
clipboard-win = "^4.4.1"
lexopt = "^0.2.0"
urlencoding = "2.1.0"
winreg = "0.10"

[dependencies.winapi]
features = ["winuser"]
version = "0.3.9"

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
